--- a/client/index.html
+++ b/client/index.html
@@ -29,8 +29,8 @@
     <div id="chats"></div>
 
     <script>
-      $(function(){
-        app.init()
+      $(function() {
+        app.init();
       });
     </script>  </body>
 </html>
